liste déroulantes username implémentées

--- a/templates/chess.html
+++ b/templates/chess.html
@@ -28,7 +28,7 @@
                                 {% endfor %}
                             </select>
                             <input type="submit" name="submit" class="btn mt-4"
-                                   value="Envoyer" id="forgot_button">
+                                   value="Jouer" id="forgot_button">
                         </div>
                     </form>
                 </div>
