--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -30,6 +30,7 @@
 <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
         <a class="navbar-brand" href="/">Cnambot</a>
+        {% block navbarAddOn %}{% endblock %}
         <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +83,7 @@
                 </div>
                 <div class="chatbox__content--header">
                     <h4 class="chatbox__heading--header">Cnambot</h4>
-                    <p class="chatbox__description--header">CNAMIEN, viens causer, je peux peut-être te renseigner !</p>
+                    <p class="chatbox__description--header">CNAMIEN, viens causer, je peux peut-être t'aider !</p>
                 </div>
             </div>
             <div class="chatbox__messages">
