--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -96,12 +96,10 @@
                 <button class="chatbox__send--footer send__button">Envoyer</button>
             </div>
         </div>
-        <div class="chatbox__button">
-            <button>
-                <img src="{{ url_for('static', filename='./assets/img/chatbox-icon.png') }}"
-                     alt="chat-icon"/>
-            </button>
-        </div>
+        <button class="chatbox__button">
+            <img src="{{ url_for('static', filename='./assets/img/chatbox-icon.png') }}"
+                 alt="chat-icon"/>
+        </button>
     </div>
 {% endif %}
 <!-- Content Section-->
