--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -29,6 +29,7 @@
     z-index: -123456;
     opacity: 0;
     transition: all .5s ease-in-out;
+    pointer-events: none;
 }
 
 /* CONTENT ISOPEN */
@@ -36,6 +37,7 @@
     transform: translateY(-40px);
     z-index: 123456;
     opacity: 1;
+    pointer-events: revert;
 }
 
 /* BUTTON */
