--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,21 +26,19 @@
     </script>
 {% endblock %}
 
-{% block navbarAddOn %}
-        <select name="profile_username" class="form-style" onchange="changeUserProfile(this)">
-            <option value="" selected>Quel profil souhaitez vous consulter ?</option>
-            {% for user in users %}
-                <option value="{{ user }}">{{ user }}</option>
-            {% endfor %}
-        </select>
-{% endblock %}
-
 {% block page_title %}
     Profil de {{ user_infos["username"] }}
 {% endblock %}
 
 {% block page_desc %}
-    <br>
+    <div class="form-group mt-2" style="padding-bottom: 40px">
+        <select name="profile_username" class="form-style" onchange="changeUserProfile(this)">
+            <option value="" selected>Consulter un profil</option>
+            {% for user in users %}
+                <option value="{{ user }}">{{ user }}</option>
+            {% endfor %}
+        </select>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col">
