--- a/static/css/chatbot.css
+++ b/static/css/chatbot.css
@@ -6,9 +6,9 @@
 }
 
 *, html {
-    --primaryGradient: linear-gradient(93.12deg, rgb(44, 62, 80) 0.52%, rgba(44, 62, 80, 0.73) 100%);
-    --secondaryGradient: linear-gradient(93.12deg, rgba(44, 62, 80, 0.73) 0.52%, rgb(44, 62, 80) 100%);
-    --primaryBoxShadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    --primaryGradient: linear-gradient(93.12deg, rgb(45, 18, 18) 0.52%, rgb(14, 12, 12) 100%);
+    --secondaryGradient: linear-gradient(93.12deg, rgb(14, 12, 12) 0.52%, rgb(45, 18, 18) 100%);
+    --primaryBoxShadow: 0px 10px 15px rgba(14, 12, 12, 0.75);
 }
 
 /* CHATBOX */
