--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,16 +33,16 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #1abc9c;
-    --bs-secondary: #2c3e50;
+    --bs-primary: #9d0c0c;
+    --bs-secondary: #0e0c0c;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
     --bs-warning: #ffc107;
     --bs-danger: #dc3545;
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
-    --bs-primary-rgb: 26, 188, 156;
-    --bs-secondary-rgb: 44, 62, 80;
+    --bs-primary-rgb: 157, 12, 12;
+    --bs-secondary-rgb: 14, 12, 12;
     --bs-success-rgb: 25, 135, 84;
     --bs-info-rgb: 13, 202, 240;
     --bs-warning-rgb: 255, 193, 7;
@@ -3700,12 +3700,12 @@ textarea.form-control-lg {
 
 .btn-link {
     font-weight: 400;
-    color: #1abc9c;
+    color: var(--bs-primary);
     text-decoration: underline;
 }
 
 .btn-link:hover {
-    color: #15967d;
+    color: var(--bs-primary);
 }
 
 .btn-link:disabled, .btn-link.disabled {
@@ -4048,7 +4048,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4093,7 +4093,7 @@ textarea.form-control-lg {
 
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
     color: #fff;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
 }
 
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
@@ -4242,7 +4242,7 @@ textarea.form-control-lg {
 }
 
 .nav-link:hover, .nav-link:focus {
-    color: #15967d;
+    color: var(--bs-primary);
 }
 
 .nav-link.disabled {
@@ -4296,7 +4296,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
 }
 
 .nav-fill > .nav-link,
@@ -5227,7 +5227,7 @@ textarea.form-control-lg {
 .page-link {
     position: relative;
     display: block;
-    color: #1abc9c;
+    color: var(--bs-primary);
     text-decoration: none;
     background-color: #fff;
     border: 0.125rem solid #dee2e6;
@@ -5262,8 +5262,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .page-item.disabled .page-link {
@@ -7504,11 +7504,11 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-    border-color: #1abc9c !important;
+    border-color: var(--bs-primary) !important;
 }
 
 .border-secondary {
-    border-color: #2c3e50 !important;
+    border-color: var(--bs-secondary) !important;
 }
 
 .border-success {
@@ -12014,7 +12014,7 @@ html {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link.active {
-    color: #1abc9c;
+    color: var(--bs-primary);
 }
 
 #mainNav .navbar-toggler {
@@ -12164,10 +12164,10 @@ html {
 .footer {
     padding-top: 5rem;
     padding-bottom: 5rem;
-    background-color: #2c3e50;
+    background-color: var(--bs-secondary);
     color: #fff;
 }
 
 .copyright {
-    background-color: #1a252f;
+    background-color: #2d1212;
 }
