--- a/static/css/login.css
+++ b/static/css/login.css
@@ -188,14 +188,14 @@ h6 span {
     border: none;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
-    box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
+    box-shadow: 0 4px 8px 0 rgb(45, 18, 18);
 }
 
 .form-style:focus,
 .form-style:active {
     border: none;
     outline: none;
-    box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
+    box-shadow: 0 4px 8px 0 rgb(45, 18, 18);
 }
 
 .input-icon {
@@ -289,20 +289,20 @@ h6 span {
     border: none;
     background-color: #9d0c0c;
     color: #0e0c0c;
-    box-shadow: 0 2px 6px 0 rgba(14, 12, 12, 0.75);
+    box-shadow: 0 2px 6px 0 rgb(45, 18, 18);
 }
 
 .btn:active,
 .btn:focus {
     background-color: #9d0c0c;
     color: #0e0c0c;
-    box-shadow: 0 4px 12px 0 rgba(14, 12, 12, 0.75);
+    box-shadow: 0 4px 12px 0 rgb(45, 18, 18);
 }
 
 .btn:hover {
     background-color: #9d0c0c;
     color: #0e0c0c;
-    box-shadow: 0 8px 24px 0 rgba(14, 12, 12, 0.75);
+    box-shadow: 0 8px 24px 0 rgb(45, 18, 18);
 }
 
 .logo {
