--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@
     --bs-orange: #fd7e14;
     --bs-yellow: #ffc107;
     --bs-green: #198754;
-    --bs-teal: #1abc9c;
+    --bs-teal: var(--bs-primary);
     --bs-cyan: #0dcaf0;
     --bs-white: #fff;
     --bs-gray: #6c757d;
@@ -240,7 +240,7 @@ sup {
 }
 
 a {
-    color: #1abc9c;
+    color: var(--bs-primary);
     text-decoration: underline;
 }
 
@@ -2486,13 +2486,13 @@ textarea.form-control-lg {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
+    color: #fff;
+    background-color: #0e0c0c;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
     background-position: right 0.75rem center;
     background-size: 16px 12px;
-    border: 0.125rem solid #ced4da;
+    border: 0.125rem solid #0e0c0c;
     border-radius: 0.5rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     -webkit-appearance: none;
@@ -2507,9 +2507,9 @@ textarea.form-control-lg {
 }
 
 .form-select:focus {
-    border-color: #8ddece;
+    border-color: #0e0c0c;
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.25);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .form-select[multiple], .form-select[size]:not([size="1"]) {
@@ -2518,7 +2518,7 @@ textarea.form-control-lg {
 }
 
 .form-select:disabled {
-    background-color: #e9ecef;
+    background-color: #0e0c0c;
 }
 
 .form-select:-moz-focusring {
@@ -2590,8 +2590,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .form-check-input:checked[type=checkbox] {
@@ -2603,8 +2603,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type=checkbox]:indeterminate {
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2693,7 +2693,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2726,7 +2726,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
     border: 0;
     border-radius: 1rem;
     -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3165,12 +3165,12 @@ textarea.form-control-lg {
 }
 
 .btn:hover {
-    color: #212529;
+    color: #2d1212;
 }
 
 .btn-check:focus + .btn, .btn:focus {
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.25);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn:disabled, .btn.disabled, fieldset:disabled .btn {
@@ -3180,72 +3180,72 @@ textarea.form-control-lg {
 
 .btn-primary {
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #16a085;
-    border-color: #15967d;
+    background-color: #731f1f;
+    border-color: #641f1f;
 }
 
 .btn-check:focus + .btn-primary, .btn-primary:focus {
     color: #fff;
-    background-color: #16a085;
-    border-color: #15967d;
-    box-shadow: 0 0 0 0.25rem rgba(60, 198, 171, 0.5);
+    background-color: #731f1f;
+    border-color: #641f1f;
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #15967d;
-    border-color: #148d75;
+    background-color: #731f1f;
+    border-color: #641f1f;
 }
 
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.25rem rgba(60, 198, 171, 0.5);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-primary:disabled, .btn-primary.disabled {
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .btn-secondary {
     color: #fff;
-    background-color: #2c3e50;
-    border-color: #2c3e50;
+    background-color: #0e0c0c;
+    border-color: #0e0c0c;
 }
 
 .btn-secondary:hover {
     color: #fff;
-    background-color: #253544;
-    border-color: #233240;
+    background-color: #2d1212;
+    border-color: #2d1212;
 }
 
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
     color: #fff;
-    background-color: #253544;
-    border-color: #233240;
-    box-shadow: 0 0 0 0.25rem rgba(76, 91, 106, 0.5);
+    background-color: #731f1f;
+    border-color: #641f1f;
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #233240;
-    border-color: #212f3c;
+    background-color: #731f1f;
+    border-color: #641f1f;
 }
 
 .btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.25rem rgba(76, 91, 106, 0.5);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-secondary:disabled, .btn-secondary.disabled {
     color: #fff;
-    background-color: #2c3e50;
-    border-color: #2c3e50;
+    background-color: #731f1f;
+    border-color: #641f1f;
 }
 
 .btn-success {
@@ -3459,44 +3459,44 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    color: #1abc9c;
-    border-color: #1abc9c;
+    color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-    box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.5);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-    box-shadow: 0 0 0 0.25rem rgba(26, 188, 156, 0.5);
+    box-shadow: 0 0 0 0.25rem rgb(45, 18, 18);
 }
 
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-    color: #1abc9c;
+    color: var(--bs-primary);
     background-color: transparent;
 }
 
 .btn-outline-secondary {
-    color: #2c3e50;
-    border-color: #2c3e50;
+    color: var(--bs-secondary);
+    border-color: var(--bs-secondary);
 }
 
 .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #2c3e50;
-    border-color: #2c3e50;
+    background-color: var(--bs-secondary);
+    border-color: var(--bs-secondary);
 }
 
 .btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
@@ -3505,8 +3505,8 @@ textarea.form-control-lg {
 
 .btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
     color: #fff;
-    background-color: #2c3e50;
-    border-color: #2c3e50;
+    background-color: var(--bs-secondary);
+    border-color: var(--bs-secondary);
 }
 
 .btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
@@ -3514,7 +3514,7 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
-    color: #2c3e50;
+    color: var(--bs-secondary);
     background-color: transparent;
 }
 
@@ -4230,7 +4230,7 @@ textarea.form-control-lg {
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: #1abc9c;
+    color: var(--bs-primary);
     text-decoration: none;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -5092,9 +5092,9 @@ textarea.form-control-lg {
 }
 
 .accordion-button:not(.collapsed) {
-    color: #17a98c;
+    color: var(--bs-primary);
     background-color: #e8f8f5;
-    box-shadow: inset 0 -0.125rem 0 rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 -0.125rem 0 rgb(45, 18, 18);
 }
 
 .accordion-button:not(.collapsed)::after {
@@ -5476,7 +5476,7 @@ textarea.form-control-lg {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #1abc9c;
+    background-color: var(--bs-primary);
     transition: width 0.6s ease;
 }
 
@@ -5531,7 +5531,7 @@ textarea.form-control-lg {
     z-index: 1;
     color: #f0f0f0;
     text-decoration: none;
-    background-color: #2c3e50;
+    background-color: var(--bs-secondary);
 }
 
 .list-group-item-action:active {
@@ -5568,8 +5568,8 @@ textarea.form-control-lg {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
 }
 
 .list-group-item + .list-group-item {
@@ -7036,7 +7036,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-    color: #1abc9c;
+    color: var(--bs-primary);
 }
 
 .link-primary:hover, .link-primary:focus {
@@ -7044,7 +7044,7 @@ textarea.form-control-lg {
 }
 
 .link-secondary {
-    color: #2c3e50;
+    color: var(--bs-secondary);
 }
 
 .link-secondary:hover, .link-secondary:focus {
@@ -11945,9 +11945,9 @@ html {
     width: 100%;
     max-width: 7rem;
     height: 0.25rem;
-    background-color: #2c3e50;
+    background-color: var(--bs-secondary);
     border-radius: 1rem;
-    border-color: #2c3e50;
+    border-color: var(--bs-secondary);
 }
 
 .divider-custom .divider-custom-line:first-child {
@@ -11959,7 +11959,7 @@ html {
 }
 
 .divider-custom .divider-custom-icon {
-    color: #2c3e50;
+    color: var(--bs-secondary);
     font-size: 2rem;
 }
 
@@ -12006,7 +12006,7 @@ html {
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-    color: #1abc9c;
+    color: var(--bs-primary);
 }
 
 #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
@@ -12040,12 +12040,12 @@ html {
 
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
         color: #fff;
-        background: #1abc9c;
+        background: var(--bs-primary);
     }
 
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: #fff;
-        background: #1abc9c;
+        background: var(--bs-primary);
     }
 
     #mainNav.navbar-shrink {
@@ -12139,7 +12139,7 @@ html {
 }
 
 .portfolio-modal .btn-close {
-    color: #1abc9c;
+    color: var(--bs-primary);
     font-size: 2rem;
     padding: 1rem;
 }
