--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -107,40 +107,54 @@
 <!-- Footer-->
 <footer class="footer text-center">
     <div class="container">
-        <div class="devs">
-            <h3 class="text-uppercase">Les développeurs du projet</h3>
+        <div id="admin" style="margin-bottom: 20px">
+            <h3 class="text-uppercase">L'admin du site</h3>
             <br>
+            <div class="row">
+                <div class="col">
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
+                             alt="avatar-max"/>
+                        <h4 class="mb-4">Max</h4>
+                        <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
+                            <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}"
+                                 alt="linkedin-max"
+                                 style="width:32px;height:32px">
+                        </a>
+                    </div>
+                </div>
+                <div class="col">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Aperiam asperiores assumenda beatae dolorum incidunt quasi suscipit tenetur.
+                        Architecto enim error fugit, itaque labore omnis quidem repudiandae sint velit voluptatem
+                        voluptates.
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <!-- Max Lesage-->
-            <div class="col-lg-4 mb-5 mb-lg-0">
-                <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
-                     alt="avatar-max"/>
-                <h4 class="mb-4">Max Lesage</h4>
-                <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
-                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-max"
-                         style="width:32px;height:32px">
-                </a>
-            </div>
-            <!-- Corentin Grégoire-->
-            <div class="col-lg-4 mb-5 mb-lg-0">
-                <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
-                     alt="avatar-coco"/>
-                <h4 class="mb-4">Corentin Grégoire</h4>
-                <a href="https://www.linkedin.com/in/corentin-gr%C3%A9goire-27141b1ba">
-                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-corentin"
-                         style="width:32px;height:32px">
-                </a>
-            </div>
-            <!-- Ammar Kheder-->
-            <div class="col-lg-4 mb-5 mb-lg-0">
-                <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
-                     alt="avatar-ammar"/>
-                <h4 class="mb-4">Ammar Kheder</h4>
-                <a href="https://fr.linkedin.com/in/ammar-kheder-a37053193">
-                    <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
-                         style="width:32px;height:32px">
-                </a>
+        <div id="contributors" style="margin-bottom: 20px">
+            <h3 class="text-uppercase">Les contributeurs</h3>
+            <br>
+            <div class="row">
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
+                         alt="avatar-coco"/>
+                    <h4 class="mb-4">Corentin</h4>
+                    <a href="https://www.linkedin.com/in/corentin-gr%C3%A9goire-27141b1ba">
+                        <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-corentin"
+                             style="width:32px;height:32px">
+                    </a>
+                </div>
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/ammar.png') }}"
+                         alt="avatar-ammar"/>
+                    <h4 class="mb-4">Ammar</h4>
+                    <a href="https://fr.linkedin.com/in/ammar-kheder-a37053193">
+                        <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}" alt="linkedin-ammar"
+                             style="width:32px;height:32px">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
