--- a/templates/layouts/base_layout.html
+++ b/templates/layouts/base_layout.html
@@ -107,23 +107,21 @@
 <!-- Footer-->
 <footer class="footer text-center">
     <div class="container">
-        <div id="admin" style="margin-bottom: 20px">
+        <div id="admin" style="margin-bottom:50px">
             <h3 class="text-uppercase">L'admin du site</h3>
-            <br>
-            <div class="row">
-                <div class="col">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
-                             alt="avatar-max"/>
-                        <h4 class="mb-4">Max</h4>
-                        <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
-                            <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}"
-                                 alt="linkedin-max"
-                                 style="width:32px;height:32px">
-                        </a>
-                    </div>
+            <br><br>
+            <div class="row justify-content-center">
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/max.png') }}"
+                         alt="avatar-max"/>
+                    <h4 class="mb-4">Max</h4>
+                    <a href="https://www.linkedin.com/in/max-lesage-8137b81b7/">
+                        <img src="{{ url_for('static', filename='./assets/img/linkedin.png') }}"
+                             alt="linkedin-max"
+                             style="width:32px;height:32px">
+                    </a>
                 </div>
-                <div class="col">
+                <div class="col-lg-4 mb-5 mb-lg-0">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Aperiam asperiores assumenda beatae dolorum incidunt quasi suscipit tenetur.
@@ -133,10 +131,15 @@
                 </div>
             </div>
         </div>
-        <div id="contributors" style="margin-bottom: 20px">
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <div id="contributors">
             <h3 class="text-uppercase">Les contributeurs</h3>
-            <br>
-            <div class="row">
+            <br><br>
+            <div class="row justify-content-center">
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <img class="avatar" src="{{ url_for('static', filename='./assets/img/avatars/corentin.png') }}"
                          alt="avatar-coco"/>
