--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -64,7 +64,7 @@
          */
         function chessRequest(payload) {
             return fetch(
-                'http://localhost:5000/chess/' + '{{ game_id }}',
+                'https://lecnambot.herokuapp.com/chess/' + '{{ game_id }}',
                 {
                     method: 'POST',
                     body: JSON.stringify(payload),
