--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -27,7 +27,7 @@
         checkWindowSize();
 
         // WebSocket for chess
-        const socket = io('ws://127.0.0.1:5000/chess');
+        const socket = io('ws://lecnambot.herokuapp.com/chess');
         socket.on('connect', () => {
             console.log('WebSocket connected to chess namespace: ' + '{{ game_id }}');
             socket.emit('chess_join', {gameId: '{{ game_id }}'});
@@ -64,7 +64,7 @@
          */
         function chessRequest(payload) {
             return fetch(
-                'http://127.0.0.1:5000/chess/' + '{{ game_id }}',
+                'https://lecnambot.herokuapp.com/chess/' + '{{ game_id }}',
                 {
                     method: 'POST',
                     body: JSON.stringify(payload),
